--- a/proiect/src/main/resources/static/index.html
+++ b/proiect/src/main/resources/static/index.html
@@ -15,29 +15,13 @@
             --active-song: rgba(37, 117, 252, 0.3);
         }
 
-        * {
-            box-sizing: border-box;
-            transition: all 0.3s ease;
-        }
-
+        * { box-sizing: border-box; transition: all 0.3s ease; }
         body {
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
             color: var(--text-color);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
-        }
-
-        h1 {
-            font-weight: 600;
-            letter-spacing: 1px;
-            margin-bottom: 30px;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            min-height: 100vh; margin: 0; padding: 20px;
         }
 
         .player-container, .form-container {
@@ -47,131 +31,70 @@
             border: 1px solid var(--glass-border);
             padding: 25px;
             border-radius: 20px;
-            width: 100%;
-            max-width: 450px;
+            width: 100%; max-width: 450px;
             box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
             margin-bottom: 20px;
         }
 
         #current-song-title {
-            text-align: center;
-            font-size: 1.1em;
-            font-weight: 600;
-            margin-bottom: 15px;
-            min-height: 25px;
-            color: #fff;
+            text-align: center; font-size: 1.1em; font-weight: 600; margin-bottom: 15px; min-height: 25px;
         }
 
-        audio {
-            width: 100%;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            opacity: 0.9;
-        }
+        audio { width: 100%; margin-bottom: 20px; border-radius: 10px; opacity: 0.9; }
 
         .song-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            max-height: 250px;
-            overflow-y: auto;
-            /* Custom Scrollbar */
-            scrollbar-width: thin;
-            scrollbar-color: rgba(255,255,255,0.3) transparent;
+            list-style: none; padding: 0; margin: 0; max-height: 250px; overflow-y: auto;
+            scrollbar-width: thin; scrollbar-color: rgba(255,255,255,0.3) transparent;
         }
-
-        .song-list::-webkit-scrollbar {
-            width: 6px;
-        }
-        .song-list::-webkit-scrollbar-thumb {
-            background-color: rgba(255,255,255,0.3);
-            border-radius: 20px;
-        }
+        .song-list::-webkit-scrollbar { width: 6px; }
+        .song-list::-webkit-scrollbar-thumb { background-color: rgba(255,255,255,0.3); border-radius: 20px; }
 
         .song-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 12px 15px;
-            margin-bottom: 8px;
-            background: rgba(0, 0, 0, 0.2);
-            border-radius: 12px;
-            cursor: pointer;
-            border: 1px solid transparent;
+            display: flex; justify-content: space-between; align-items: center;
+            padding: 12px 15px; margin-bottom: 8px;
+            background: rgba(0, 0, 0, 0.2); border-radius: 12px;
+            cursor: pointer; border: 1px solid transparent;
         }
-
-        .song-item:hover {
-            background: rgba(255, 255, 255, 0.1);
-            transform: translateX(5px);
-        }
-
+        .song-item:hover { background: rgba(255, 255, 255, 0.1); }
         .song-item.active {
-            background: var(--active-song);
-            border-color: var(--secondary-color);
+            background: var(--active-song); border-color: var(--secondary-color);
             box-shadow: 0 0 10px rgba(37, 117, 252, 0.4);
         }
 
-        .song-item span {
-            font-weight: 500;
-        }
+        .song-info { display: flex; flex-direction: column; }
+        .song-info span { font-weight: 500; }
+        .song-info small { opacity: 0.7; font-size: 0.85em; }
 
-        .song-item small {
-            opacity: 0.7;
-            font-size: 0.85em;
+        .delete-btn {
+            background: rgba(255, 59, 48, 0.2); color: #ff3b30;
+            border: none; border-radius: 50%; width: 28px; height: 28px;
+            display: flex; align-items: center; justify-content: center;
+            cursor: pointer; font-size: 16px; margin-left: 10px;
+            padding: 0; box-shadow: none; margin-top: 0;
         }
+        .delete-btn:hover { background: rgba(255, 59, 48, 0.8); color: white; transform: scale(1.1); }
 
-        .form-container h3 {
-            margin-top: 0;
-            text-align: center;
-            font-weight: 400;
-            margin-bottom: 15px;
-        }
-
+        .form-container h3 { margin-top: 0; text-align: center; font-weight: 400; margin-bottom: 15px; }
         input {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 12px;
-            border-radius: 30px;
-            border: none;
-            background: rgba(255, 255, 255, 0.9);
-            color: #333;
-            font-family: inherit;
-            outline: none;
+            width: 100%; padding: 12px; margin-bottom: 12px;
+            border-radius: 30px; border: none; background: rgba(255, 255, 255, 0.9);
+            color: #333; font-family: inherit; outline: none;
         }
+        input:focus { box-shadow: 0 0 0 3px rgba(37, 117, 252, 0.4); }
 
-        input:focus {
-            box-shadow: 0 0 0 3px rgba(37, 117, 252, 0.4);
-        }
-
-        button {
-            width: 100%;
-            padding: 12px;
+        .add-btn {
+            width: 100%; padding: 12px;
             background: linear-gradient(to right, #6a11cb, #2575fc);
-            border: none;
-            border-radius: 30px;
-            color: white;
-            font-weight: 600;
-            cursor: pointer;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-top: 5px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            border: none; border-radius: 30px; color: white;
+            font-weight: 600; cursor: pointer; text-transform: uppercase;
+            letter-spacing: 1px; margin-top: 5px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
-
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        button:active {
-            transform: translateY(1px);
-        }
+        .add-btn:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); }
+        .add-btn:active { transform: translateY(1px); }
 
     </style>
 </head>
 <body>
-
-<h1>🎧 Music Player</h1>
 
 <div class="player-container">
     <div id="current-song-title">Select a track to play</div>
@@ -186,7 +109,7 @@
     <input type="text" id="new-title" placeholder="Song Title">
     <input type="text" id="new-artist" placeholder="Artist Name">
     <input type="text" id="new-url" placeholder="MP3 URL (e.g. https://...)">
-    <button onclick="addSong()">Add Track</button>
+    <button class="add-btn" onclick="addSong()">Add Track</button>
 </div>
 
 <script>
@@ -204,10 +127,15 @@
             songs.forEach(song => {
                 const li = document.createElement('li');
                 li.className = 'song-item';
+
                 li.innerHTML = `
-                        <span>${song.title}</span>
-                        <small>by ${song.artist}</small>
+                        <div class="song-info">
+                            <span>${song.title}</span>
+                            <small>by ${song.artist}</small>
+                        </div>
+                        <button class="delete-btn" onclick="deleteSong('${song.id}', event)">×</button>
                     `;
+
                 li.onclick = () => playSong(song, li);
                 playlistElement.appendChild(li);
             });
@@ -219,7 +147,6 @@
     function playSong(song, element) {
         document.querySelectorAll('.song-item').forEach(item => item.classList.remove('active'));
         element.classList.add('active');
-
         currentTitleElement.innerText = `${song.title} - ${song.artist}`;
         audioPlayer.src = song.url;
         audioPlayer.play();
@@ -230,26 +157,33 @@
         const artist = document.getElementById('new-artist').value;
         const url = document.getElementById('new-url').value;
 
-        if (!title || !url) {
-            alert("Please enter at least a title and a URL");
-            return;
-        }
+        if (!title || !url) { alert("Please enter title and URL"); return; }
+
+        await fetch('/api/songs', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ title, artist, url })
+        });
+
+        document.getElementById('new-title').value = '';
+        document.getElementById('new-artist').value = '';
+        document.getElementById('new-url').value = '';
+        loadSongs();
+    }
+
+    async function deleteSong(id, event) {
+        event.stopPropagation();
+
+        if(!confirm("Are you sure you want to delete this song?")) return;
 
         try {
-            await fetch('/api/songs', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ title, artist, url })
-            });
-
-            document.getElementById('new-title').value = '';
-            document.getElementById('new-artist').value = '';
-            document.getElementById('new-url').value = '';
+            await fetch(`/api/songs/${id}`, { method: 'DELETE' });
             loadSongs();
         } catch (error) {
-            alert("Error adding song");
+            console.error("Error deleting song:", error);
         }
     }
+
     loadSongs();
 </script>
 
